# burridgeknopoffsimulator

./: CMakeLists.txt  MANIFEST.in  blockarray.py  cmakebuild.py  code_metrics.py  differential.py  drivingplate.py  drivingplateforce.py  friction.py  frictionalforce.py  license.txt  main.py  positionupdater.py  potential_energy.py  setup.py  springforce.py  util.py  velocity.py
burridgeknopofflib/: CMakeLists.txt
burridgeknopofflib/include/: frictionforce.h
burridgeknopofflib/include/differentials/: bkdifeq.h  positionupdater.h  springforce.h
burridgeknopofflib/include/odesolver/: euler.h  odesolver.h  rungekutta.h
burridgeknopofflib/src/differentials/: bkdifeq.cpp  frictionalforce.cpp  positionupdater.cpp  springforce.cpp
burridgeknopofflib/src/odesolver/: odesolver.cpp  rungekutta4.cpp
burridgeknopofflib/src/python/odesolver/: py_odesolver.cpp
include/: blockarray.h  frictionforce.h  springforce.h  utilities.h
include/differentials/: bkdifeq.h  difeq.h  differential.h  frictionalforce.h  plateforce.h  positionupdater.h  scaledfrictionalforce.h  scaledplateforce.h  scaledspringforce.h  springforce.h
include/differentials/c/: bkdifeq.h  cdifferential.h  cfrictionalforce.h  cplateforce.h  cpositionupdater.h  cspringforce.h  difeq.h  plateforce.h
include/odesolver/: euler.h  odesolver.h  rungekutta.h  rungekutta4.h
include/odesolver/c/: euler.h  odesolver.h  rungekutta.h  rungekutta4.h
include/python/odesolver/: py_odesolver.h
simulator/: requirements.txt  signal.py
simulator/src/: code_metrics.py  physicalconstants.py  styles.py  utilities.py
simulator/src/files/: data.py  datafile.py  graphpartition.py  partition.py  runinfo.py  scaledata.py  timeslice.py  util.py
simulator/src/graphing/: draw.py  graph.py  graphing.py  histogram.py  line.py  suplot.py
simulator/src/mains/: main_analysis.py  main_block_viewer.py  main_convert_2_to_3.py  main_graph_partition.py  main_partition.py  main_partition_viewer.py  main_scaled_simulation.py  main_simulation.py  main_slip_viewer.py  main_view_graph_partition.py  main_view_partition.py
simulator/src/partition/: graphpartition.py  partition.py
simulator/src/simulation/: simulation.py
simulator/src/viewers/: blockviewer.py  floatvalidate.py  integercheck.py  intvalidate.py  listchoice.py  partitionviewer.py  slipviewer.py  tkviewer.py
src/: blockarray.cpp  cutilities.cpp  frictionforce.cpp  positionupdater.cpp  python.cpp  scaledfrictionalforce.cpp  scaledplateforce.cpp  scaledspringforce.cpp  springforce.cpp  utilities.cpp
src/differentials/: bkdifeq.cpp  differential.cpp  frictionalforce.cpp  plateforce.cpp  positionupdater.cpp  python.cpp  scaledfrictionalforce.cpp  scaledplateforce.cpp  scaledspringforce.cpp  springforce.cpp
src/differentials/c/: bkdifeq.cpp  cdifferential.cpp  cfrictionalforce.cpp  cplateforce.cpp  cpositionupdater.cpp  cspringforce.cpp  frictionalforce.cpp  plateforce.cpp  positionupdater.cpp  springforce.cpp
src/files/: data.py  datafile.py  main.py  partition.py  readwrite.py  runinfo.py  saveables.py  scaledata.py  scaledruninfo.py  slipmain.py  timeslice.py  tkmain.py  util.py
src/graphing/: curve_fit.py  draw.py  graph.py  histogram.py  suplot.py
src/mains/: main_block_viewer.py  main_partition.py  main_scaled_simulation.py  main_simulation.py  main_view_partition.py
src/odesolver/: euler.cpp  euler.py  heuns.py  midpoint.py  odesolver.cpp  odesolver.py  rungekutta.cpp  rungekutta.py  rungekutta4.cpp  test.py
src/odesolver/c/: euler.cpp  odesolver.cpp  rungekutta.cpp  rungekutta4.cpp
src/partition/: partition.py  partitionmain.py
src/python/: python.cpp
src/python/odesolver/: py_odesolver.cpp
src/saveable/: composite.py  saveablearray.py  saveablechar.py  saveableenum.py  saveablefloat.py  saveableimage.py  saveableint.py  saveablendarray.py  saveables.py  saveablestring.py  saveabletype.py  union.py
src/simulation/: blockarray.py  differential.py  drivingplateforce.py  frictionalforce.py  main.py  onedimblockarray.py  positionupdater.py  scaleddifferential.py  scaledfrictionforce.py  scaledplateforce.py  scaledspringforce.py  simulation.py  springforce.py
src/viewers/: slipviewer.py  tkviewer.py  tkviewer2d.py
viewers/: potentialenergy.py  tkviewer1d.py  tkviewer2d.py
